# BojkoFX2

./: .gitignore  CHANGELOG.md  start_dashboard.bat
FX/: .gitignore  AI_PROJECT_CONTEXT.md  AI_SESSION_REPORT_2026-02-22.md  DOCS_ORGANIZED.txt  IBKR_MIGRATION_COMPLETE.md  INSTRUKCJA_OPERACYJNA.md  PROJECT_VISUAL_SUMMARY.txt  README.md  README_IBKR_GATEWAY.md  _probe_data.py  debug_bot.sh  diag_ticks.sh  fix_bom.ps1  fix_bom.py  requirements.txt  status.cmd  status.sh  test_awk.sh  test_awk2.sh  test_implementation.py  test_order_roundtrip.py  test_trades.csv
FX/backtests/: config_backtest.yaml  engine.py  experiments.py  indicators.py  metrics.py  reporting.py  run_experiments.py  signals_bos_pullback.py
FX/config/: config.yaml  config.yaml.backup  ibkr.env.example
FX/dashboard/: app.py  index.html  serve.py  start_dashboard.bat
FX/docs/: ALGORITHM_IMPROVEMENTS_TRANSFER.md  ARCHITECTURE.md  STRATEGY_AUDIT_2026-03-10.md
US100/: package-lock.json  requirements.txt
dashboard/: app.py  index.html  serve.py
deploy/: bojkofx-dashboard.service  bojkofx.service  migrate_to_monorepo.sh
docs/: FX_DEEP_CODE_AUDIT.md  US100_DEEP_CODE_AUDIT.md
scripts/: changelog.py
shared/: pyproject.toml
shared/bojkofx_shared/: __init__.py
shared/bojkofx_shared/core/: config.py  models.py  state_store.py  strategy.py
shared/bojkofx_shared/execution/: ibkr_exec.py
shared/bojkofx_shared/indicators/: atr.py  ema.py  htf_location.py  session_filter.py  volatility_regime.py
shared/bojkofx_shared/reporting/: logger.py
shared/bojkofx_shared/structure/: bias.py  pivots.py
(+464 files in other folders)
